2015-11-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/string.c
	  Separate C11 behaviour from implementation-defined behaviour.

2015-11-07 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCglue.c:
	  Eliminate unused static symbols. (__str_%d generated in stringToSymbol()).
	* support/regression/tests/bug-2089.c:
	  Improve test case.
	* support/regression/ports/mcs51-xstack-auto/spec.mk:
	  Use default sdcc11.
	* support/regression/tests/string.c:
	  Disabled for test-host.

2015-11-07 Philipp Klaus Krause <pkk AT spth.de>

	* support/util/dbuf_string.h,
	  support/util/dbuf_string.c,
	  src/SDCCval.c,
	  src/SDCC.lex:
	  Handling of UTF-16 and UTF-16 string literals in the frontend up to strVal().

2015-11-06 Philipp Klaus Krause <pkk AT spth.de>

	* support/util/dbuf.h,
	  support/util/dbuf.c,
	  support/util/dbuf_string.h,
	  support/util/dbuf_string.c:
	  Allow prepending to dynamic buffers.
	* src/SDCC.lex,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Support C11 u8 prefix for UTF-8-encoded unicode string literals.
	* src/SDCCutil.c,
	  support/regression/tests/string.c:
	  Fix handling of universal escape sequences in UTF-8-encoded strig literals.
	* support/regression/tests/iso-8859-1.c:
	  Test support for source encodings other than unicode.

2015-11-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.y: only emit W_FLEXARRAY_INSTRUCT for c89
	* src/SDCCpeeph.c (labelJTInRange): removed env SDCC_SJMP_JUMPTABLE check,
	  closes patch #29,
	  (readRules): clean up

2015-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Print calling convention for functions.
	* src/z80/peep.c:
	  More accurate handling of register arguments in peepholes.

2015-11-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (packRegsForOneuse): fixed bug 2373
	* support/regression/tests/bug-2373.c: new, added

2015-11-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* src/yacc.vcxproj: deleted yacc project